CHANGELOG

== June 15, 2012
* Updated Rails and Sunspot SOLR
* Security Update
* Updated gems
* font size fixed for highlights on CCS3 browsers
* Added Item title to posterous share button

== June 14, 2012
* Fixed blockquote font color, was too light
* Added time ago for published items
* Updated gems
* Updated Twitter Bootstrap

== June 12-13, 2012
* made font slightly darker
* Improved admin performance
* Updated gems
* Admin User must set the published date
* Allow to reuse images on new items

== June 9, 2012
* Added some nice filters to admin/items
* updated gems
* Added scopes for refractoring
* added original ticker

== June 7, 2012
* Fixed bug for opensearch.xml
* Fixed bug: showing unpublished items on author page
* refractored code
* minor bug fixes

== June 3, 2012
* Oauth with Twitter
* Updated Rails to 3.2.5
* Updated gems
* Improved twitter links
* Improved Admin interface
* Fixed bug about draft items countdown
* Added RSS feed for comments

== June 1, 2012
* Several minor bug fixes
* Added a few more rspec tests

== May 30, 2012
* Added tinyMCE on comments
* Changed order on sidebar

== May 29, 2012
* Added more validation to item form
* Removed check_for_suspicious on comments
* Cleared unused Item columns
* Improved new item form
* Added 'original' checkbox to items (WIP)

== May 28, 2012
* Fix page views bug
* Fix bug for Recently Commented Articles
* Added youtube image on sidebar
* Gem update

== May 27, 2012
* Added Recently Commented Articles to sidebar
* Removed Language from Article page
* Updated Twitter Bootstrap
* Added iconification
* Reduced sidebar caching from 10 minutes to 5 minutes

== May 26, 2012
* Removed Recent comments from sidebar
* Most Read items descreased from 90 to 15 days
* Added Most Commented items in last 30 days
* Added Popular Authors (sorted my most items)
* Whole Sidebar is cached for 10 minutes
* Added default image for users without image
* Added Facebook Connect for new user registration