@@ -11,7 +11,7 @@
 #
 # It's strongly recommended to check this file into your version control system.
 
-ActiveRecord::Schema.define(:version => 20120613140211) do
+ActiveRecord::Schema.define(:version => 20120616065135) do
 
   create_table "active_admin_comments", :force => true do |t|
     t.integer  "resource_id",   :null => false
@@ -89,6 +89,15 @@ ActiveRecord::Schema.define(:version => 20120613140211) do
     t.integer  "user_id"
     t.datetime "created_at",    :null => false
     t.datetime "updated_at",    :null => false
+  end
+
+  create_table "documents", :force => true do |t|
+    t.string   "title"
+    t.string   "data"
+    t.string   "content_type"
+    t.integer  "user_id"
+    t.datetime "created_at",   :null => false
+    t.datetime "updated_at",   :null => false
   end
 
   create_table "email_deliveries", :force => true do |t|
